force-app/main/default/objects/os_Listing__c/os_Listing__c.object-meta.xml
<CustomObject>
    <label>Listing</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>