force-app/main/default/objects/os_Listing__c/fields/Broker_LID__c.field-meta.xml
<CustomField>
    <fullName>Broker_LID__c</fullName>
    <formula>SUBSTITUTE(  os_Brokers_Listing_ID__c , &quot;-&quot;, &quot;_&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker LID(Formula)</label>
    <type>Text</type>
</CustomField>