force-app/main/default/objects/os_Listing__c/fields/Check_PV_Exist__c.field-meta.xml
<CustomField>
    <fullName>Check_PV_Exist__c</fullName>
    <formula>!ISBLANK( os_Property_Valuation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check PV Exist</label>
    <type>Checkbox</type>
</CustomField>