force-app/main/default/objects/os_Listing__c/fields/Decoration__c.field-meta.xml
<CustomField>
    <fullName>Decoration__c</fullName>
    <label>Decoration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unmodernised</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>