force-app/main/default/objects/os_Listing__c/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <label>Furnished</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>