force-app/main/default/objects/os_Listing__c/fields/Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Accuracy__c</fullName>
    <label>Geocode Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>NearAddress</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Street</fullName>
            </value>
            <value>
                <fullName>ExtendedZip</fullName>
            </value>
            <value>
                <fullName>Zip</fullName>
            </value>
            <value>
                <fullName>Neighborhood</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>