force-app/main/default/objects/os_Listing__c/fields/Gulf_SIR_Listing_Section__c.field-meta.xml
<CustomField>
    <fullName>Gulf_SIR_Listing_Section__c</fullName>
    <label>Gulf SIR Listing Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Listing</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Short-Term Rentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>