force-app/main/default/objects/os_Listing__c/fields/GUNTHER_IMPORT__c.field-meta.xml
<CustomField>
    <fullName>GUNTHER_IMPORT__c</fullName>
    <label>GUNTHER IMPORT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gunther</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>