force-app/main/default/objects/os_Listing__c/fields/HOA_Frequency__c.field-meta.xml
<CustomField>
    <fullName>HOA_Frequency__c</fullName>
    <label>HOA Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>