force-app/main/default/objects/os_Listing__c/fields/Lease_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Lease_Frequency__c</fullName>
    <label>Lease Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>