force-app/main/default/objects/os_Listing__c/fields/Listing_Agent_GUID__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_GUID__c</fullName>
    <formula>Owner:User.Company_Staff_GUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent GUID</label>
    <type>Text</type>
</CustomField>