force-app/main/default/objects/os_Listing__c/fields/Listing_Inquiry_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Listing_Inquiry_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Inquiry Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>