force-app/main/default/objects/os_Listing__c/fields/Listing_Verification_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Listing_Verification_Call_Center__c</fullName>
    <label>Listing Verification Call Center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Contact number</fullName>
            </value>
            <value>
                <fullName>Client Not contactable – 3 attempts made</fullName>
            </value>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Call Centre Verified</fullName>
            </value>
            <value>
                <fullName>Client not Interested</fullName>
            </value>
            <value>
                <fullName>Property Sold</fullName>
            </value>
            <value>
                <fullName>Property Rented</fullName>
            </value>
            <value>
                <fullName>Documents Missing</fullName>
            </value>
            <value>
                <fullName>Client not happy with the Agent</fullName>
            </value>
            <value>
                <fullName>Client not happy with the Gulf SIR</fullName>
            </value>
            <value>
                <fullName>Incorrect Document</fullName>
            </value>
            <value>
                <fullName>Property Sold by Gulf SIR</fullName>
            </value>
            <value>
                <fullName>Property Rented by Gulf SIR</fullName>
            </value>
            <value>
                <fullName>Developer Stock</fullName>
            </value>
            <value>
                <fullName>Temporary Bypass</fullName>
            </value>
            <value>
                <fullName>Dummy Listings</fullName>
            </value>
            <value>
                <fullName>Verification not required</fullName>
            </value>
            <value>
                <fullName>Listing Verified after Rejection</fullName>
            </value>
            <value>
                <fullName>Price too low</fullName>
            </value>
            <value>
                <fullName>Signature Mismatch</fullName>
            </value>
            <value>
                <fullName>Non Focus Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>