force-app/main/default/objects/os_Listing__c/fields/Offplan_Developer__c.field-meta.xml
<CustomField>
    <fullName>Offplan_Developer__c</fullName>
    <label>Offplan Developer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abwab Real Estate</fullName>
            </value>
            <value>
                <fullName>Al Ain</fullName>
            </value>
            <value>
                <fullName>Al Wasl</fullName>
            </value>
            <value>
                <fullName>Arabian Construction</fullName>
            </value>
            <value>
                <fullName>ASI Real Estate Dev LLC</fullName>
            </value>
            <value>
                <fullName>Avani by Al Fahim</fullName>
            </value>
            <value>
                <fullName>Battersea</fullName>
            </value>
            <value>
                <fullName>DAMAC Properties</fullName>
            </value>
            <value>
                <fullName>Dubai Properties</fullName>
            </value>
            <value>
                <fullName>Ellington</fullName>
            </value>
            <value>
                <fullName>EMAAR</fullName>
            </value>
            <value>
                <fullName>Forum Group</fullName>
            </value>
            <value>
                <fullName>Hillside</fullName>
            </value>
            <value>
                <fullName>IFA Hotel and Resort FZE</fullName>
            </value>
            <value>
                <fullName>Ithra Dubai</fullName>
            </value>
            <value>
                <fullName>Jumeirah Golf Estates</fullName>
            </value>
            <value>
                <fullName>Kerzner</fullName>
            </value>
            <value>
                <fullName>Liv Developers</fullName>
            </value>
            <value>
                <fullName>Marina Arcade</fullName>
            </value>
            <value>
                <fullName>Marriott International</fullName>
            </value>
            <value>
                <fullName>Marsa Al Arab Residences LLC</fullName>
            </value>
            <value>
                <fullName>Meraas</fullName>
            </value>
            <value>
                <fullName>Meydan</fullName>
            </value>
            <value>
                <fullName>Meydan Sobha</fullName>
            </value>
            <value>
                <fullName>Muraba</fullName>
            </value>
            <value>
                <fullName>-None-</fullName>
            </value>
            <value>
                <fullName>NYC Holdings Limited</fullName>
            </value>
            <value>
                <fullName>Omniyat</fullName>
            </value>
            <value>
                <fullName>Palme Couture</fullName>
            </value>
            <value>
                <fullName>Select Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>