force-app/main/default/objects/os_Listing__c/fields/os_1ROutcome__c.field-meta.xml
<CustomField>
    <fullName>os_1ROutcome__c</fullName>
    <label>1R- Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PIF submitted to Developer with 10% Payment</fullName>
            </value>
            <value>
                <fullName>reservation issued by Developer</fullName>
            </value>
            <value>
                <fullName>Reservation submitted by Buyer</fullName>
            </value>
            <value>
                <fullName>Reservation submitted by Buyer with 10%</fullName>
            </value>
            <value>
                <fullName>Reservation submitted by Buyer with 10% + 4%</fullName>
            </value>
            <value>
                <fullName>SPA issued by the Developer</fullName>
            </value>
            <value>
                <fullName>SPA signed by Buyer and submitted to Developer</fullName>
            </value>
            <value>
                <fullName>SPA executed by Developer</fullName>
            </value>
            <value>
                <fullName>Property Available</fullName>
            </value>
            <value>
                <fullName>Oqood issued</fullName>
            </value>
            <value>
                <fullName>100% payment paid by buyer and title deed issued by Developer</fullName>
            </value>
            <value>
                <fullName>100% payment paid by buyer and title deed not issued by Developer</fullName>
            </value>
            <value>
                <fullName>SPA issued to Sales team for Buyer&apos;s signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>