force-app/main/default/objects/os_Listing__c/fields/os_Acres__c.field-meta.xml
<CustomField>
    <fullName>os_Acres__c</fullName>
    <label>Acres</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>