force-app/main/default/objects/os_Listing__c/fields/os_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>