force-app/main/default/objects/os_Listing__c/fields/os_Address_UK__c.field-meta.xml
<CustomField>
    <fullName>os_Address_UK__c</fullName>
    <formula>IF(ISBLANK( os_Unit_Number__c ),&quot;&quot;,os_Unit_Number__c )
&amp; IF(ISBLANK(os_Unit_Number__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_House_Building_Name__c ),&quot;&quot;,os_House_Building_Name__c )
&amp; IF(ISBLANK(os_House_Building_Name__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_Street__c ),&quot;&quot;,os_Street__c )
&amp; IF(ISBLANK(os_Street__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_Street2__c ),&quot;&quot;,os_Street2__c )
&amp; IF(ISBLANK(os_Street2__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_Village__c ),&quot;&quot;,os_Village__c )
&amp; IF(ISBLANK(os_Village__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_Area_Town__c ),&quot;&quot;,os_Area_Town__c )
&amp; IF(ISBLANK(os_Area_Town__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_Country__c ),&quot;&quot;,os_Country__c )
&amp; IF(ISBLANK(os_Country__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_Postcode__c  ),&quot;&quot;,os_Postcode__c  )
&amp; IF(ISBLANK(os_Postcode__c  ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK(os_Country__c ),&quot;&quot;,os_Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address UK</label>
    <type>Text</type>
</CustomField>