force-app/main/default/objects/os_Listing__c/fields/os_AdultCommunity__c.field-meta.xml
<CustomField>
    <fullName>os_AdultCommunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Community</label>
    <type>Checkbox</type>
</CustomField>