force-app/main/default/objects/os_Listing__c/fields/os_Agency__c.field-meta.xml
<CustomField>
    <fullName>os_Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joint Sole</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Sole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>