force-app/main/default/objects/os_Listing__c/fields/os_Allowed_for_AutoPublish__c.field-meta.xml
<CustomField>
    <fullName>os_Allowed_for_AutoPublish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allowed for Auto Publish</label>
    <type>Checkbox</type>
</CustomField>