force-app/main/default/objects/os_Listing__c/fields/os_AmountRetained__c.field-meta.xml
<CustomField>
    <fullName>os_AmountRetained__c</fullName>
    <label>Amount Retained</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>