force-app/main/default/objects/os_Listing__c/fields/os_Annual_CommunityFee__c.field-meta.xml
<CustomField>
    <fullName>os_Annual_CommunityFee__c</fullName>
    <label>Annual Community Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>