force-app/main/default/objects/os_Listing__c/fields/os_Apartment_House_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Apartment_House_Unit_Number__c</fullName>
    <label>Apartment / House / Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>