force-app/main/default/objects/os_Listing__c/fields/os_ApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>os_ApplicationFee__c</fullName>
    <label>Application Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>