force-app/main/default/objects/os_Listing__c/fields/os_Arabic_Description__c.field-meta.xml
<CustomField>
    <fullName>os_Arabic_Description__c</fullName>
    <label>Arabic Description</label>
    <type>TextArea</type>
</CustomField>