force-app/main/default/objects/os_Listing__c/fields/os_Area_Town__c.field-meta.xml
<CustomField>
    <fullName>os_Area_Town__c</fullName>
    <label>Area / Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>