force-app/main/default/objects/os_Listing__c/fields/os_Auto_Generated_broker_reference_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Auto_Generated_broker_reference_ID__c</fullName>
    <formula>Owner:User.os_Company_Initials__c  &amp;&quot;-&quot;&amp;  os_Listing_type_initial__c &amp;&quot;-&quot;&amp; os_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Generated broker reference ID</label>
    <type>Text</type>
</CustomField>