force-app/main/default/objects/os_Listing__c/fields/os_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Availability_Date__c</fullName>
    <label>Availability Date</label>
    <type>DateTime</type>
</CustomField>