force-app/main/default/objects/os_Listing__c/fields/os_Available_from__c.field-meta.xml
<CustomField>
    <fullName>os_Available_from__c</fullName>
    <label>Available from</label>
    <type>Date</type>
</CustomField>