force-app/main/default/objects/os_Listing__c/fields/os_Available_to__c.field-meta.xml
<CustomField>
    <fullName>os_Available_to__c</fullName>
    <label>Available to</label>
    <type>Date</type>
</CustomField>