force-app/main/default/objects/os_Listing__c/fields/os_Back_Office__c.field-meta.xml
<CustomField>
    <fullName>os_Back_Office__c</fullName>
    <label>Back Office MLS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>