force-app/main/default/objects/os_Listing__c/fields/os_Bank_owned__c.field-meta.xml
<CustomField>
    <fullName>os_Bank_owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Owned</label>
    <type>Checkbox</type>
</CustomField>