force-app/main/default/objects/os_Listing__c/fields/os_Basement_details__c.field-meta.xml
<CustomField>
    <fullName>os_Basement_details__c</fullName>
    <label>Basement Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>