force-app/main/default/objects/os_Listing__c/fields/os_Bathrooms_bathrooms__c.field-meta.xml
<CustomField>
    <fullName>os_Bathrooms_bathrooms__c</fullName>
    <label>Bathrooms</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>