force-app/main/default/objects/os_Listing__c/fields/os_Bedrooms_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Bedrooms_pb__c</fullName>
    <label>Bedrooms</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>