force-app/main/default/objects/os_Listing__c/fields/os_Broker_lid__c.field-meta.xml
<CustomField>
    <fullName>os_Broker_lid__c</fullName>
    <label>Broker LID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>