force-app/main/default/objects/os_Listing__c/fields/os_Brokers_Listing_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Brokers_Listing_ID__c</fullName>
    <label>Broker&apos;s Listing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>