force-app/main/default/objects/os_Listing__c/fields/os_Building_dubizzle__c.field-meta.xml
<CustomField>
    <fullName>os_Building_dubizzle__c</fullName>
    <label>Building - Dubizzle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>