force-app/main/default/objects/os_Listing__c/fields/os_Building_Style__c.field-meta.xml
<CustomField>
    <fullName>os_Building_Style__c</fullName>
    <label>Building Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Frame</fullName>
            </value>
            <value>
                <fullName>Art Deco</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
            </value>
            <value>
                <fullName>Cape Cod</fullName>
            </value>
            <value>
                <fullName>Colonial</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Cottage</fullName>
            </value>
            <value>
                <fullName>Craftsman</fullName>
            </value>
            <value>
                <fullName>Creole</fullName>
            </value>
            <value>
                <fullName>Dome</fullName>
            </value>
            <value>
                <fullName>Dutch Colonial</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>French Provincial</fullName>
            </value>
            <value>
                <fullName>Georgian</fullName>
            </value>
            <value>
                <fullName>Gothic Revival</fullName>
            </value>
            <value>
                <fullName>Greek Revival</fullName>
            </value>
            <value>
                <fullName>High Rise</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Italianate</fullName>
            </value>
            <value>
                <fullName>Loft</fullName>
            </value>
            <value>
                <fullName>Mansion</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Modern</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Neoclassical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>