force-app/main/default/objects/os_Listing__c/fields/os_Business_entity__c.field-meta.xml
<CustomField>
    <fullName>os_Business_entity__c</fullName>
    <label>Business Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HERE</fullName>
            </value>
            <value>
                <fullName>SPF</fullName>
            </value>
            <value>
                <fullName>C&amp;S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>