force-app/main/default/objects/os_Listing__c/fields/os_Buyers_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>os_Buyers_Agent_Commission__c</fullName>
    <label>Buyers Agent Commission %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>