force-app/main/default/objects/os_Listing__c/fields/os_BypassListingStatusRule__c.field-meta.xml
<CustomField>
    <fullName>os_BypassListingStatusRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassListingStatusRule</label>
    <type>Checkbox</type>
</CustomField>