force-app/main/default/objects/os_Listing__c/fields/os_Calendar_Sync__c.field-meta.xml
<CustomField>
    <fullName>os_Calendar_Sync__c</fullName>
    <label>Calendar Sync</label>
    <type>DateTime</type>
</CustomField>