force-app/main/default/objects/os_Listing__c/fields/os_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>os_CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafeID</label>
    <type>Text</type>
</CustomField>