force-app/main/default/objects/os_Listing__c/fields/os_CC_Verification_Bypass__c.field-meta.xml
<CustomField>
    <fullName>os_CC_Verification_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Verification Bypass</label>
    <type>Checkbox</type>
</CustomField>