force-app/main/default/objects/os_Listing__c/fields/os_City_County__c.field-meta.xml
<CustomField>
    <fullName>os_City_County__c</fullName>
    <label>City / County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>