force-app/main/default/objects/os_Listing__c/fields/os_Client_Repersenative_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>os_Client_Repersenative_Contact_Details__c</fullName>
    <label>Client Repersenative Contact Details</label>
    <type>TextArea</type>
</CustomField>