force-app/main/default/objects/os_Listing__c/fields/os_Co_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Co_Listing_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Listing Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>