force-app/main/default/objects/os_Listing__c/fields/os_Colisting_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>os_Colisting_Agent_Email__c</fullName>
    <label>Colisting Agent Email</label>
    <type>Email</type>
</CustomField>