force-app/main/default/objects/os_Listing__c/fields/os_Colisting_Agent_MLS_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Colisting_Agent_MLS_ID__c</fullName>
    <label>Colisting Agent MLS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>